# TattleTots

./: .cursorrules  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ecology_dual_currency_model.md  pyproject.toml  tattletots_plan.md  tattletots_requirements.md
.agents/skills/dev-workflow/: SKILL.md
.agents/skills/domain-adapter-guide/: SKILL.md
.agents/skills/sonar-quality/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
Large Experiments/: README.md  baseline_parallel.py  baseline_spot_check.py  batch_config.json  compare_bma_baselines.py  debug_fire_dispatch.py  experiment_runs.py  path_safety.py  quick_validation_config.json  run_all_baselines.py  run_batch.py  run_experiments.py  run_quick_validation.py
configs/: balanced.json  conservative.json  gaussian_shift_default.json  harsh_ecology.json  high_dim_evolution.json  longrun_evolution.json  sensitive.json
docs/: COORDINATION.md  architecture.md  domain_integration.md  theory.md
src/tattletots/: __init__.py  cli.py  output_schema.py  path_utils.py
src/tattletots/engine/: __init__.py  attention.py  compression.py  config.py  cop.py  development.py  dispatch_integration.py  domestication.py  escalation.py  gpu_utils.py  peer_observation.py  relevance.py  reproduction.py  residual.py  response_judgment.py  sensing.py  spatial.py  temporal.py  trophic.py  trust.py  whistleblowing.py  world.py
src/tattletots/integration/: __init__.py  tattletots_layer.py
src/tattletots/interface/: __init__.py  domain_adapter.py
src/tattletots/models/: __init__.py  agent.py  dispatch_target.py  energy.py  genome.py  location.py  report.py  response_outcome.py  stream.py  user.py  user_cop.py  whistleblower_report.py
src/tattletots/scenarios/: __init__.py  gaussian_shift.py  high_dim_shift.py
src/tattletots/telemetry/: __init__.py  cost_accounting.py  recorder.py
tests/: test_cli.py  test_development.py  test_dispatch_integration.py  test_engine.py  test_escalation.py  test_high_dim_scenario.py  test_math_properties.py  test_models.py  test_peer_observation.py  test_relevance.py  test_residual.py  test_response_judgment.py  test_scenario.py  test_sensing.py  test_smoke.py  test_telemetry.py  test_temporal.py  test_user_cop.py  test_whistleblowing.py  test_world.py
