[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tattletots"
version = "0.1.0"
description = "Domain-agnostic simulation engine for populations of information-processing agents in a dual-currency ecology"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Benjamin Kirkup", email = "bckirkup@gmail.com" }]
keywords = ["simulation", "agent-based", "information-ecology", "biosurveillance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "networkx>=3.0",
    "domain-runner @ git+https://github.com/bckirkup/domain-runner.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
]
gpu = [
    "cupy-cuda12x>=13.0",
]

[project.scripts]
tattletots = "tattletots.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tattletots"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["tattletots"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["tattletots"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "domain_runner.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cupy"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: smoke test scenario validating emergent behavior",
    "integration: integration tests requiring domain-runner or dispatch loop",
]

[tool.coverage.run]
source = ["tattletots"]

[tool.coverage.report]
show_missing = true
skip_empty = true
